update UI of the main page

--- a/src/PocketLib/PocketLib/AppShell.xaml
+++ b/src/PocketLib/PocketLib/AppShell.xaml
@@ -7,15 +7,28 @@
     xmlns:pages="clr-namespace:PocketLib.Pages"
     Shell.FlyoutBehavior="Disabled"
     Shell.NavBarIsVisible="False">
+    <TabBar>
+        <ShellContent
+            Title="Mes Livres"
+            Icon="monochrome_books_vertical_fill.svg"
+            ContentTemplate="{DataTemplate pages:MainPage}"
+        />
 
-    <ShellContent
-        Title="Mes Livres"
-        Icon="books_vertical.svg"
-        ContentTemplate="{DataTemplate pages:MainPage}"
-        Route="MainPage" />
+        <ShellContent
+            Title="Ma liste"
+            Icon="monochrome_list_bullet.svg"
+            ContentTemplate="{DataTemplate pages:ListPage}"
+        />
 
-    <ShellContent
-        Title="Tous"
-        ContentTemplate="{DataTemplate pages:ListPage}"
-        Route="ListPage" />
+        <ShellContent
+            Title="Mes lectures"
+            Icon="monochrome_bookmark_fill.svg"
+            ContentTemplate="{DataTemplate pages:ListPage}"
+        />
+        <ShellContent
+            Title="Recherche"
+            Icon="monochrome_magnifyingglass.svg"
+            ContentTemplate="{DataTemplate pages:ListPage}"
+        />  
+    </TabBar>
 </Shell>
