--- a/src/PocketLib/PocketLib/Pages/ListPage.xaml
+++ b/src/PocketLib/PocketLib/Pages/ListPage.xaml
@@ -3,10 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PocketLib.Pages.ListPage"
              Title="ListPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="AAAAA"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Label Text="Column 0, Row 0"
+           WidthRequest="200" />
+        <Label Grid.Column="1"
+           Text="Column 1, Row 0" />
+        <Label Grid.Row="1"
+           Text="Column 0, Row 1" />
+        <Label Grid.Column="1"
+           Grid.Row="1"
+           Text="Column 1, Row 1" />
+    </Grid>
 </ContentPage>
