--- a/src/PocketLib/PocketLib/Resources/Styles/Colors.xaml
+++ b/src/PocketLib/PocketLib/Resources/Styles/Colors.xaml
@@ -4,11 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Primary">#ff3b30</Color>
+    <Color x:Key="Secondary">#ff3b30</Color>
+    <Color x:Key="Tertiary">#ff3b30</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
+    <Color x:Key="Gray000">#f8f8f8</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
     <Color x:Key="Gray200">#C8C8C8</Color>
     <Color x:Key="Gray300">#ACACAC</Color>
