--- a/src/PocketLib/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/PocketLib/Pages/MainPage.xaml
@@ -3,7 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PocketLib.Pages.MainPage">
 
-    <ScrollView>
+    
+    
+    <ScrollView
+        Margin="0"
+        >
+        <ScrollView.Resources>
+            <Style
+                TargetType="Image"
+                BasedOn="{StaticResource imageMainPage}"
+                >
+            </Style>
+            <Style
+                TargetType="ContentView"
+                BasedOn="{StaticResource contentMainPage}"
+                >
+            </Style>
+
+            <Style
+                TargetType="Label"
+                BasedOn="{StaticResource labelMainPage}"
+                >
+            </Style>
+        </ScrollView.Resources>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -30,119 +52,486 @@
                 FontAttributes="Bold"
                 MaximumWidthRequest="50"
                 HorizontalOptions="Start"
-                Margin="10"
+                Margin="15,10,0,0"
             />
             <ImageButton 
                 Grid.Column="1"
                 Source="plus.svg"
                 MaximumWidthRequest="16"
                 HorizontalOptions="End"
-                Margin="10"
+                Padding="0"
+                Margin="0, 10, 15, 0"
             />
             <Label
                 Grid.Row="1"
                 Text="Mes Livres"
                 FontAttributes="Bold"
                 FontSize="32"
-                Margin="12"
+                Margin="20, 0, 0, 0"
              />
+            
+            <!--Buttons-->
 
-            <Button
+
+            <ContentView
                 Grid.Row="2"
-                Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_tray_2_fill.svg"
-                Text="Tous"
-                
+                Grid.ColumnSpan="3"
                 >
-             
-            </Button>
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            <Button 
+                        <Image
+                        Source="monochrome_tray_2_fill.svg"
+                        >
+
+                        </Image>
+                        
+                        <Label
+                        Text="Tous"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text="45"
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+
+                        </Grid>
+                </Border>
+
+            </ContentView>
+            <ContentView
                 Grid.Row="3"
-                Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_person_badge_clock_fill.svg"
-                Text="En prêt"
+                Grid.ColumnSpan="3"
                 >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
+                        <Image
+                        Source="monochrome_person_badge_clock_fill.svg"
+                        >
 
-            <Button 
+                        </Image>
+                        <Label
+                        Text="En prêt"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text="1"
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
+
+
+            <ContentView
                 Grid.Row="4"
                 Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_arrow_forward.svg"
-                Text="À lire plus tard"
+                
                 >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
+                        <Image
+                        Source="monochrome_arrow_forward.svg"
+                        >
 
-            <Button 
+                        </Image>
+                        <Label
+                        Text="À lire plus tard"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text=""
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
+
+            <ContentView
                 Grid.Row="5"
                 Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_eyeglasses.svg"
-                Text="Statut de lecture"
-                >   
+                
+                >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
+                        <Image
+                        Source="monochrome_eyeglasses.svg"
+                        >
 
-            <Button 
+                        </Image>
+                        <Label
+                        Text="Statut de lecture"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text=""
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
+
+            <ContentView
                 Grid.Row="6"
                 Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_heart_fill.svg"
-                Text="Favoris"
+                
                 >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
+                        <Image
+                        Source="monochrome_heart_fill.svg"
+                        >
 
-            <Button 
+                        </Image>
+                        <Label
+                        Text="Favoris"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text=""
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
+
+
+            <ContentView
                 Grid.Row="7"
                 Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_tag_fill.svg"
-                Text="Étiquettes"
+                
                 >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
+                        <Image
+                        Source="monochrome_tag_fill.svg"
+                        >
 
+                        </Image>
+                        <Label
+                        Text="Étiquettes"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text=""
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
+            
             <Label
                 Grid.Row="8"
                 Text="Filtres"
                 FontAttributes="Bold"
                 FontSize="18"
-                Margin="12"
+                Margin="20,10,0,10"
              />
 
-            <Button 
+            <ContentView
                 Grid.Row="9"
                 Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_person_fill.svg"
-                Text="Auteur"
-                    >
+                
+                >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
-            <Button 
+                        <Image
+                        Source="monochrome_person_fill.svg"
+                        >
+
+                        </Image>
+                        <Label
+                        Text="Auteur"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text=""
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
+
+            <ContentView
                 Grid.Row="10"
                 Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="calendar.svg"
-                Text="Date de publication"
-                    >
+                
+                >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
-            <Button 
+                        <Image
+                        Source="calendar.svg"
+                        >
+
+                        </Image>
+                        <Label
+                        Text="Date de publication"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text=""
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
+
+            <ContentView
                 Grid.Row="11"
                 Grid.ColumnSpan="2"
-                Style="{StaticResource buttonMainPage}" 
-                ImageSource="monochrome_sparkles.svg"
-                Text="Note"
-                    >
+                
+                >
+                <Border
+                    StrokeThickness="0.5"
+                >
+                    <Grid
+                        Padding="0,3,0,3"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-            </Button>
+                        <Image
+                        Source="monochrome_sparkles.svg"
+                        >
+
+                        </Image>
+                        <Label
+                        Text="Note"
+                        Grid.Column="1"
+                        >
+
+                        </Label>
+
+                        <Label
+                        Text=""
+                        Grid.Column="2"
+                        >
+
+                        </Label>
+
+                        <Image
+                        Grid.Column="3"
+                        Source="monochrome_chevron_right.svg"
+                        >
+
+                        </Image>
+                    </Grid>
+                </Border>
+            </ContentView>
 
         </Grid>
 
