--- a/src/PocketLib/Pages/DatePage.xaml
+++ b/src/PocketLib/Pages/DatePage.xaml
@@ -1,38 +1,24 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-              xmlns:controls="clr-namespace:PocketLib.Pages"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:controls="clr-namespace:PocketLib.Pages"
              x:Class="PocketLib.Pages.DatePage"
              Title="DatePage">
     <ScrollView>
         <StackLayout>
 
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="10*"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <ImageButton 
-                    Source="monochrome_chevron_right.svg"
-                    MaximumWidthRequest="16"
-                    HorizontalOptions="Center"
-                />
-                <Label
-                    Grid.Column="1"
-                    Text="Date de publication"
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center"
-                />
-                <ImageButton 
-                    Grid.Column="2"
-                    Source="plus.svg"
-                    MaximumWidthRequest="16"
-                    HorizontalOptions="Center"
-                />
+            <controls:HeaderView
+                Label="Date de publication"
+                Image1="plus.svg"
+                
+                >
 
-            </Grid>
+            </controls:HeaderView>
 
+            <BoxView HeightRequest="0.5" Color="LightGray"/>
+
+            <controls:SearchBarView/>
 
             <BoxView HeightRequest="0.5" Color="LightGray"/>
 
@@ -50,8 +36,8 @@
                 Count="1"
              />
 
-
             <BoxView HeightRequest="0.5" Color="LightGray"/>
         </StackLayout>
     </ScrollView>
 </ContentPage>
+
