--- a/src/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/Pages/MainPage.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:PocketLib.Pages"
              x:Class="PocketLib.Pages.MainPage"
@@ -10,24 +11,26 @@
         <StackLayout>
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition  Width="7*"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Button 
                     Text="Modifier"
                     FontAttributes="Bold"
                     MaximumWidthRequest="50"
-                    HorizontalOptions="Start"
-                    Margin="15,10,0,0"
+                    HorizontalOptions="Center"
                 />
                 <ImageButton 
-                    Grid.Column="1"
+                    Grid.Column="2"
                     Source="plus.svg"
                     MaximumWidthRequest="16"
-                    HorizontalOptions="End"
-                    Padding="0"
-                    Margin="0, 10, 15, 0"
-                />
+                    HorizontalOptions="Center"
+                >
+                    <ImageButton.Behaviors>
+                        <toolkit:IconTintColorBehavior TintColor="Red" />
+                    </ImageButton.Behaviors>
+                </ImageButton>
 
             </Grid>
             
