--- a/src/PocketLib/Pages/ListPage.xaml
+++ b/src/PocketLib/Pages/ListPage.xaml
@@ -4,21 +4,92 @@
              xmlns:controls="clr-namespace:PocketLib.Pages"
              x:Class="PocketLib.Pages.ListPage"
              Title="ListPage">
-
+   
     <ScrollView>
         <StackLayout>
             <controls:HeaderView
                 Label="Tous"
                 Image1="monochrome_arrow_up_arrow_down.svg"
                 Image2="plus.svg"
+                ActionCommand="{Binding GoBackCommand}"
                 >
             </controls:HeaderView>
+            <controls:SeparatorWithTitle
+                Title="Alain Damasio"
+            />
+            <controls:PreviewView
+                Image="horde_contrevenant.jpg"
+                Title="La horde du contrevenant"
+                Author="Alain Damasio"
+                Status="Non lu"
+                ActionCommand="{Binding GoToDetailsCommand}"
+            />
+            <controls:PreviewView
+                Image="zone_du_dehors.jpg"
+                Title="La zone du dehors"
+                Author="Alain Damasio"
+                Status="Terminé"
+                ActionCommand="{Binding GoToDetailsCommand}"
+            />
+            <controls:SeparatorWithTitle
+                Title="Cixin Liu"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
+            <controls:PreviewView
+                Image="equateur_einstein.jpg"
+                Title="L'équateur d'Einstein"
+                Author="Cixin Liu"
+                Status="Terminé"
+            />
 
-            <BoxView HeightRequest="0.5" Color="LightGray"/>
 
-            <controls:PreviewView>
-                
-            </controls:PreviewView>
 
         </StackLayout>
     </ScrollView>
