--- a/src/PocketLib/AppShell.xaml
+++ b/src/PocketLib/AppShell.xaml
@@ -5,30 +5,29 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:PocketLib"
     xmlns:pages="clr-namespace:PocketLib.Pages"
-    Shell.FlyoutBehavior="Disabled"
     Shell.NavBarIsVisible="False">
     <TabBar>
         <ShellContent
             Title="Mes Livres"
             Icon="monochrome_books_vertical_fill.svg"
-            ContentTemplate="{DataTemplate pages:MainPage}"
-        />
+            ContentTemplate="{DataTemplate pages:MainPage}"        
+            />
 
         <ShellContent
             Title="Ma liste"
             Icon="monochrome_list_bullet.svg"
-            ContentTemplate="{DataTemplate pages:ListPage}"
+            ContentTemplate="{DataTemplate pages:TempPage}"
         />
 
         <ShellContent
             Title="Mes lectures"
             Icon="monochrome_bookmark_fill.svg"
-            ContentTemplate="{DataTemplate pages:DatePage}"
+            ContentTemplate="{DataTemplate pages:TempPage}"
         />
         <ShellContent
             Title="Recherche"
             Icon="monochrome_magnifyingglass.svg"
-            ContentTemplate="{DataTemplate pages:DetailsPage}"
-        />  
+            ContentTemplate="{DataTemplate pages:TempPage}"
+         />
     </TabBar>
 </Shell>
