--- a/src/PocketLib/Pages/Controls/ButtonView.xaml
+++ b/src/PocketLib/Pages/Controls/ButtonView.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PocketLib.Pages.MenuButtonView"
+             x:Class="PocketLib.Pages.ButtonView"
              x:Name="root">
 
     <ContentView.Resources>
@@ -15,11 +15,15 @@
         </Style>
     </ContentView.Resources>
 
-        <Grid
+    <ContentView.GestureRecognizers>
+        <TapGestureRecognizer NumberOfTapsRequired="1" 
+                              Tapped="TapGestureRecognizer_Tapped"/>
+    </ContentView.GestureRecognizers>
+    <Grid
             Padding="0,4,10,4"
             Margin="20,0,0,0"
             BindingContext="{x:Reference root}">
-                  
+            
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
@@ -29,7 +33,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="0.5*"/>
         </Grid.ColumnDefinitions>
-
+            
             <Image
                 MaximumWidthRequest="22"
                 Source="{Binding Image, Source={x:Reference root}}">
