--- a/src/PocketLib/Pages/Controls/HeaderView.xaml
+++ b/src/PocketLib/Pages/Controls/HeaderView.xaml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:the49="https://schemas.the49.com/dotnet/2023/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="PocketLib.Pages.HeaderView"
@@ -21,6 +22,12 @@
             <ImageButton.Behaviors>
                 <toolkit:IconTintColorBehavior TintColor="Red" />
             </ImageButton.Behaviors>
+            <ImageButton.GestureRecognizers>
+                <TapGestureRecognizer NumberOfTapsRequired="1" 
+                      Tapped="TapGestureRecognizer_Tapped"/>
+            </ImageButton.GestureRecognizers>
+
+
         </ImageButton>
         <Label
             Grid.Column="2"
@@ -31,28 +38,43 @@
             HorizontalOptions="Center"
         />
 
+        <HorizontalStackLayout
+            
+            Grid.Column="3">
 
-        <ImageButton 
-            Grid.Column="3"
-            Source="{Binding Image2, Source={x:Reference root}}"
-            MaximumWidthRequest="16"
-            HorizontalOptions="Center"
-        >
-            <ImageButton.Behaviors>
-                <toolkit:IconTintColorBehavior TintColor="Red" />
-            </ImageButton.Behaviors>
-        </ImageButton>
+            <ImageButton 
+                Margin="10,0"
+                Source="{Binding Image2, Source={x:Reference root}}"
+                MaximumWidthRequest="16"
+                HorizontalOptions="Center"
+                >
+                <ImageButton.Behaviors>
+                    <toolkit:IconTintColorBehavior TintColor="Red" />
+                </ImageButton.Behaviors>
+            </ImageButton>
 
-        <ImageButton 
-            Grid.Column="4"
-            Source="{Binding Image1, Source={x:Reference root}}"
-            MaximumWidthRequest="16"
-            HorizontalOptions="Center"
-        >
-            <ImageButton.Behaviors>
-                <toolkit:IconTintColorBehavior TintColor="Red" />
-            </ImageButton.Behaviors>
-        </ImageButton>
-
+            <ImageButton 
+                Margin="15,0"
+                Source="{Binding Image1, Source={x:Reference root}}"
+                MaximumWidthRequest="16"
+                HorizontalOptions="Center"
+            >
+                <ImageButton.Behaviors>
+                    <toolkit:IconTintColorBehavior TintColor="Red" />
+                </ImageButton.Behaviors>
+                <the49:ContextMenu.Menu>
+                    <DataTemplate>
+                        <the49:Menu Title="Ajouter un livre">
+                            <the49:Group Title="Ajouter un livre">
+                                <the49:Action Title="Scanner un code-barres" />
+                                <the49:Action Title="Scanner des codes-barres" />
+                            </the49:Group>
+                            <the49:Action Title="Rechercher en ligne" />
+                            <the49:Action Title="Saisir l'ISBN" />
+                        </the49:Menu>
+                    </DataTemplate>
+                </the49:ContextMenu.Menu>
+            </ImageButton>
+        </HorizontalStackLayout>
     </Grid>
 </ContentView>
