--- a/src/PocketLib/Pages/Controls/PreviewView.xaml
+++ b/src/PocketLib/Pages/Controls/PreviewView.xaml
@@ -1,58 +1,55 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="PocketLib.Pages.PreviewView"
+             xmlns:controls="clr-namespace:PocketLib.Pages"
              x:Name="root"
              >
-
+    <ContentView.GestureRecognizers>
+        <TapGestureRecognizer NumberOfTapsRequired="1" 
+                          Tapped="TapGestureRecognizer_Tapped"/>
+    </ContentView.GestureRecognizers>
     <Grid
-            BindingContext="{x:Reference root}">
+        Padding="0,10"
+        BindingContext="{x:Reference root}">
 
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="80"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="1.5*   "></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <Image
-            Source="sample_book.png"
-            HeightRequest="100"
+            Source="{Binding Image, Source={x:Reference root}}"
+            HeightRequest="90"
             HorizontalOptions="Center"
             ></Image>
 
-        <Grid
-            Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
+        <StackLayout
+            Spacing="-10"
+            Grid.Column="1"
+            >
 
             <Label
-                Text="Titre"
+                Text="{Binding Title, Source={x:Reference root}}"
                 FontAttributes="Bold"
             ></Label>
 
             <Label
                 Grid.Row="1"
-                Text="Auteur"
+                Text="{Binding Author, Source={x:Reference root}}"
             ></Label>
 
             <Label
                 Grid.Row="2"
-                Text="Status"
+                Text="{Binding Status, Source={x:Reference root}}"
                 TextColor="Gray"
             ></Label>
 
-            <Label
-                Grid.Row="4"
-                Text="Note"
-                TextColor="Gray"
-            ></Label>
-            
-        </Grid>
+        </StackLayout>
+        
+        
+        <controls:StarsView Grid.Column="1" VerticalOptions="End"/>
         
     </Grid>
 
