--- a/src/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/Pages/MainPage.xaml
@@ -68,7 +68,7 @@
                 Label="Tous"
                 Image="monochrome_tray_2_fill.svg"
                 Count="42"
-                ActionCommand="{Binding GoToTousCommand}"
+                ActionCommand="{Binding GoToListCommand}"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -76,7 +76,7 @@
             <controls:ButtonView
                 Label="En prêt"
                 Image="monochrome_person_badge_clock_fill.svg"
-                ActionCommand="{Binding GoToEnPretCommand}"
+                ActionCommand="{Binding GoToLoanCommand}"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -137,6 +137,7 @@
             <controls:ButtonView
                 Label="Note"
                 Image="monochrome_sparkles.svg"
+                ActionCommand="{Binding GoToNoteCommand}"
              />
             
             <BoxView HeightRequest="0.5" Color="LightGray"/>
