--- a/src/PocketLib/Pages/Controls/SearchBarView.xaml
+++ b/src/PocketLib/Pages/Controls/SearchBarView.xaml
@@ -18,6 +18,7 @@
         <Button 
             Grid.Column="1"
             Text="Annuler"
+            TextColor="{StaticResource Gray100}"
             FontAttributes="Bold"
             MaximumWidthRequest="50"
             HorizontalOptions="Center"
