--- a/src/PocketLib/Pages/ListPage.xaml
+++ b/src/PocketLib/Pages/ListPage.xaml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:controls="clr-namespace:PocketLib.Pages"
+             xmlns:controls="clr-namespace:PocketLib.Pages.Views"
              x:Class="PocketLib.Pages.ListPage"
-             Title="ListPage">
-   
+             Title="Tous">
+<!--
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Ajouter" Priority="1"
+                     Order="Primary" IconImageSource="plus.png"/>
+        <ToolbarItem Text="Order" Priority="2"
+                     Order="Primary" IconImageSource="arrow_up_arrow_down.svg"/>
+    </ContentPage.ToolbarItems>
+-->
     <ScrollView>
         <StackLayout>
             <controls:HeaderView
