--- a/src/PocketLib/Pages/Views/DetailsView.xaml
+++ b/src/PocketLib/Pages/Views/DetailsView.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:controls="clr-namespace:PocketLib.Pages"
-             x:Class="PocketLib.Pages.DetailsView">
+             xmlns:controls="clr-namespace:PocketLib.Pages.Views"
+             x:Class="PocketLib.Pages.Views.DetailsView">
     <ScrollView>
         <VerticalStackLayout>
             <Grid Padding="5,15">
