--- a/src/PocketLib/Pages/Views/HeaderView.xaml
+++ b/src/PocketLib/Pages/Views/HeaderView.xaml
@@ -3,7 +3,7 @@
              xmlns:the49="https://schemas.the49.com/dotnet/2023/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="PocketLib.Pages.HeaderView"
+             x:Class="PocketLib.Pages.Views.HeaderView"
              x:Name="root">
     <Grid
         BindingContext="{x:Reference root}">
