--- a/src/PocketLib/Pages/Views/StarsView.xaml
+++ b/src/PocketLib/Pages/Views/StarsView.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="PocketLib.Pages.StarsView">
+             x:Class="PocketLib.Pages.Views.StarsView">
     <Grid
         Grid.Row="4"
         Margin="0,0,0,10"
