--- a/src/PocketLib/Pages/Views/TitleAndDescView.xaml
+++ b/src/PocketLib/Pages/Views/TitleAndDescView.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:ctrl="clr-namespace:PocketLib.Controls"
-             x:Class="PocketLib.Pages.TitleAndDescView"
+             x:Class="PocketLib.Pages.Views.TitleAndDescView"
              x:Name="root">
 
     <ContentView.Resources>
