replace old header by a new stylized shellTitleView

--- a/src/PocketLib/Pages/AuthorPage.xaml
+++ b/src/PocketLib/Pages/AuthorPage.xaml
@@ -4,19 +4,22 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:controls="clr-namespace:PocketLib.Pages.Views"
              x:Class="PocketLib.Pages.AuthorPage"
+             Shell.NavBarIsVisible="True"
              Title="AuthorPage">
+
+    <Shell.TitleView>
+        <controls:HeaderView
+            Label="Auteur"
+            Image1="monochrome_arrow_up_arrow_down.svg"
+            Image2="plus.svg"
+            >
+        </controls:HeaderView>
+    </Shell.TitleView>
+
     <ScrollView>
         <StackLayout>
 
-            <controls:HeaderView
-            Label="Auteur"
-            Image1="monochrome_arrow_up_arrow_down.svg"
-            ActionCommand="{Binding GoBackCommand}"
-            >
-
-            </controls:HeaderView>
-
-            <BoxView HeightRequest="0.5" Color="LightGray"/>
+           <BoxView HeightRequest="0.5" Color="LightGray"/>
 
             <controls:SearchBarView/>
 
