--- a/src/PocketLib/Pages/NotePage.xaml
+++ b/src/PocketLib/Pages/NotePage.xaml
@@ -4,19 +4,20 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:controls="clr-namespace:PocketLib.Pages.Views"
              x:Class="PocketLib.Pages.NotePage"
+             Shell.NavBarIsVisible="True"
              Title="NotePage">
+
+    <Shell.TitleView>
+        <controls:HeaderView
+            Label="Note"
+            Image1="monochrome_arrow_up_arrow_down.svg"
+            Image2="plus.svg"
+            >
+        </controls:HeaderView>
+    </Shell.TitleView>
 
     <ScrollView>
         <StackLayout>
-
-            <controls:HeaderView
-                Label="Note"
-                Image1="monochrome_arrow_up_arrow_down.svg"
-                ActionCommand="{Binding GoBackCommand}"
-                >
-
-            </controls:HeaderView>
-
             <controls:SeparatorWithTitle
                 Title="5 étoiles"
             />
