--- a/src/PocketLib/Pages/DetailsPage.xaml
+++ b/src/PocketLib/Pages/DetailsPage.xaml
@@ -4,14 +4,19 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:controls="clr-namespace:PocketLib.Pages.Views"
              x:Class="PocketLib.Pages.DetailsPage"
+             Shell.NavBarIsVisible="True"
              Title="DetailsPage">
+
+
+    <Shell.TitleView>
+        <controls:HeaderView
+            Label="Détails du livre"
+            >
+        </controls:HeaderView>
+    </Shell.TitleView>
+
     <ScrollView>
         <StackLayout>
-            <controls:HeaderView
-                Label="Détails du livre"
-                ActionCommand="{Binding GoBackCommand}"
-                >
-            </controls:HeaderView>
 
             <BoxView HeightRequest="0.5" Color="LightGray"/>
 
